--- a/index.html
+++ b/index.html
@@ -32,6 +32,35 @@
     <body>
         <main>
             <div id="container">
+                <div class="colum-left">
+                    <header class="header-left">
+                        <div class="avatar">
+                            <div class="avatar-img"></div>
+                            <div class="avatar-name">Nome Utente</div>
+                        </div>
+                        <div class="header-left-icons">
+
+                            <i class="fas fa-circle-notch"></i>
+                            <i class="fas fa-comment-alt"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                        </div>
+                    </header>
+                    <section class="notification">
+                        <div  class="circle">
+                            <i class="fas fa-bell-slash"></i>
+
+                        </div>
+                        <span>
+                            <h4>Ricevi notifiche di nuovi messaggi</h4>
+                            <span>Attiva le notifiche dasktop ></span>
+                        </span>
+
+                    </section>
+
+                </div>
+                <div class="colum-right">
+
+                </div>
 
             </div>
         </main>
