--- a/index.html
+++ b/index.html
@@ -82,7 +82,19 @@
                         </div>
                     </header>
                     <div id="chat-right">
-                        
+                        <div class="message-right">
+                            <span class="green">
+                                hai finito l'esercizio ??
+                                <div class="date">orario </div>
+                            </span>
+                        </div>
+                        <div class="message-left">
+                            <span class="white">
+                                non ancora
+                                <span class="date">orario pppp </span>
+                            </span>
+                        </div>
+
                     </div>
                 </div>
 
