aggiustata scroll bar destra

--- a/index.html
+++ b/index.html
@@ -81,20 +81,60 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </div>
                     </header>
-                    <div id="chat-right">
-                        <div class="message-right">
-                            <span class="green">
-                                hai finito l'esercizio ??
-                                <div class="date">orario </div>
-                            </span>
-                        </div>
-                        <div class="message-left">
-                            <span class="white">
-                                non ancora
-                                <span class="date">orario pppp </span>
-                            </span>
-                        </div>
+                    <div class="background-right">
 
+                        <div id="chat-right">
+                            <div class="message-right">
+                                <span class="green">
+                                    hai finito l'esercizio ??
+                                    <div class="date">orario </div>
+                                </span>
+                            </div>
+                            <div class="message-left">
+                                <span class="white">
+                                    non ancora
+                                    <span class="date">orario pppp </span>
+                                </span>
+                            </div>
+                            <div class="message-right">
+                                <span class="green">
+                                    hai finito l'esercizio ??
+                                    <div class="date">orario </div>
+                                </span>
+                            </div>
+                            <div class="message-left">
+                                <span class="white">
+                                    non ancora
+                                    <span class="date">orario pppp </span>
+                                </span>
+                            </div>
+                            <div class="message-right">
+                                <span class="green">
+                                    hai finito l'esercizio ??
+                                    <div class="date">orario </div>
+                                </span>
+                            </div>
+                            <div class="message-left">
+                                <span class="white">
+                                    non ancora
+                                    <span class="date">orario pppp </span>
+                                </span>
+                            </div>
+                            <div class="message-right">
+                                <span class="green">
+                                    hai finito l'esercizio ??
+                                    <div class="date">orario </div>
+                                </span>
+                            </div>
+                            <div class="message-left">
+                                <span class="white">
+                                    non ancora
+                                    <span class="date">orario pppp </span>
+                                </span>
+                            </div>
+                            
+                        </div>
+                        
                         <div class="input-chat-right">
                             <i class="far fa-smile"></i>
                             <input type="text">
