--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- FAVICON  -->
     </head>
     <body>
-        <main id="root">
+        <div id="root">
             <div id="container">
                 <div class="colum-left">
                     <header class="header-left">
@@ -96,42 +96,6 @@
                                     <span class="date">orario pppp </span>
                                 </span>
                             </div>
-                            <div class="message-right">
-                                <span class="green">
-                                    hai finito l'esercizio ??
-                                    <div class="date">orario </div>
-                                </span>
-                            </div>
-                            <div class="message-left">
-                                <span class="white">
-                                    non ancora
-                                    <span class="date">orario pppp </span>
-                                </span>
-                            </div>
-                            <div class="message-right">
-                                <span class="green">
-                                    hai finito l'esercizio ??
-                                    <div class="date">orario </div>
-                                </span>
-                            </div>
-                            <div class="message-left">
-                                <span class="white">
-                                    non ancora
-                                    <span class="date">orario pppp </span>
-                                </span>
-                            </div>
-                            <div class="message-right">
-                                <span class="green">
-                                    hai finito l'esercizio ??
-                                    <div class="date">orario </div>
-                                </span>
-                            </div>
-                            <div class="message-left">
-                                <span class="white">
-                                    non ancora
-                                    <span class="date">orario pppp </span>
-                                </span>
-                            </div>
                             
                         </div>
                         
@@ -144,7 +108,7 @@
                 </div>
 
             </div>
-        </main>
+        </div>
 
 
 
