--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </section>
                     <ul id="chats">
                         
-                        <li v-if="contact.visible" v-for="(contact, index) in contacts" :key="index" @click="searchContact(index)"><img class="avatar-img" :src="'img/avatar'+ contact.avatar+'.jpg'" :alt="contact.name">{{contact.name}}</li>
+                        <li v-if="contact.visible" v-for="(contact, index) in contacts" :class="index == guestContact ? 'active' : null" :key="index" @click="searchContact(index)"><img class="avatar-img" :src="'img/avatar'+ contact.avatar+'.jpg'" :alt="contact.name">{{contact.name}}</li>
                     </ul>
                 </div>
                 <div class="colum-right">
@@ -82,10 +82,10 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </div>
                     </header>
-                    <div class="background-right">
+                    <div class="background-right"> 
 
                         <div id="chat-right">
-                            <div v-for="contact in contacts[guestContact].messages" class="message" :class="contact.status">
+                            <div v-for="(contact, key) in contacts[guestContact].messages" :key="key" class="message" :class="contact.status">
                                 <div class="message.status">
                                     <span>
                                         {{contact.message}}
